# TicTacToeWithBettingOnChain

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  TicTacToeWithBettingOnChain.cabal  cabal.project  package-lock.json  package.json  tsconfig.json
docs/: compiler-plugins.md  index.md
docs/cardano-cli/: query-utxo.md  script-data-json.md
docs/diagrams/: first.md
docs/game-play/: game1-win.md  game2-tie.md  game3-cancel-initiated-game.md  game4-cancel-inprogress-game.md.md
docs/serialization/: index.md
src/: Deploy.hs  DeployTypedAlwaysSucceed.hs  DeployUntyped.hs  DeployUntypedAlwaysSucceed.hs  GameValidator.hs  TypedAlwaysSucceed.hs  Untyped.hs  UntypedAlwaysSucceed.hs  app.ts  cardano-cli-config.ts  cli-builder.ts  create-wallet.ts  emurgo-datum.ts  emurgo_datum.ts  fund-players.ts  fundPlayers.ts  inline-datums.ts  lucid_datum.ts  models.ts  new-cardano-cli.ts  new-fund-players.ts  previewCardanoCliJs.ts  queryTip.js  smart-contract.ts  smart-contract_old.ts  smart_contract.ts  tic-tac-toe.hs  transaction_with_inline_datum.ts  utils.ts  utils_old.ts  utxo-stack-at-script-address.ts
src/app/: game-data.ts  game.ts  utils.ts
src/cardano-cli/: address-build-options.ts  address.ts  cardano-cli.ts  era.ts  network.ts  node-mode.ts  options.ts  query.ts  run-command.ts  script-data.ts  temp-dir.ts  transaction-build-options.ts  transaction-build.ts  transaction.ts  utxo-id.ts  utxo.ts  wallet.ts
src/cardano-cli-builder/: address.ts  builder.ts  cardano-cli-bin.ts
src/examples/: consume-utxo-on-script-address.ts  create-wallet.ts  emurgo-datum.ts  fund-players.ts  lucid-datum.ts  player1_utxos.json  query-protocol-parameters.ts  query-tip.ts  read-utxo-inline-datum.ts  script-data-to-class.ts  script_utxos.json  simple_transaction_to_script_address.ts  test-address.ts  transaction_with_inline_datum.ts  utxo-details.ts  utxo-stack-at-script-address.ts  wait-for-utxo.ts
src/game-play/: game1-win.ts  game1.ts  game2-tie.ts  game3-cancel-initiated-game.ts  game4-cancel-started-game.ts  (+1 more)
testnet/: ticTacToe.plutus  typed-always-succeed.plutus
(+103 files in other folders)
