cabal-version:      2.4
name:               TicTacToeWithBettingOnChain
version:            0.1.0.0
synopsis:           Cardano on chain game

-- A longer description of the package.
-- description:

-- URL for the project homepage or repository.
homepage:

-- A URL where users can report bugs.
-- bug-reports:

license:            MIT
license-file:       LICENSE
author:             Jaco Labuschagne
maintainer:         zodimo@gmail.com

-- A copyright notice.
-- copyright:
-- category:

-- Extra files to be distributed with the package, such as examples or a README.
extra-source-files:
    CHANGELOG.md
    README.md

library
    -- Modules exported by the library.
    exposed-modules:  GameValidator
                      ,Deploy
                      ,DeployUntypedAlwaysSucceed
                      ,UntypedAlwaysSucceed

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.14.3.0
                      , aeson -any
                      , bytestring -any
                      , cardano-api -any
                      , containers -any
                      , data-default 
                      , freer-extras -any
                      , plutus-contract -any
                      , plutus-ledger -any
                      , plutus-ledger-api -any
                      , plutus-ledger-constraints -any
                      , plutus-script-utils
                      , plutus-tx -any
                      , plutus-tx-plugin -any
                      , text -any
                      , lens -any
                      , serialise -any

    hs-source-dirs:   src
    default-language: Haskell2010

    ghc-options:      -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
